--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     </head>
     <body>
         <header>
-            <div class="header_container">Left side</div>
-            <div class="header_container">Right side</div>
+            <button type="button">View High Score</button>
+            <div class="timer">Right side</div>
         </header>
-        <section></section>
+        <section ></section>
         <footer></footer>
+        <script src="assets/js/scripts.js"></script>
     </body>
 </html>
