created button for answers in html, added styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
             <button type="button">View High Score</button>
             <div class="timer">Right side</div>
         </header>
-        <section ></section>
+        <section >
+             <div class="questions">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad nisi voluptatum nam? Molestias, itaque!</div>
+             <div class="answers">
+                <button type="button" class="ansBtn">Answer 1</button>
+                <button type="button" class="ansBtn">Answer 2</button>
+                <button type="button" class="ansBtn">Answer 3</button>
+                <button type="button" class="ansBtn">Answer 4</button>
+             </div>
+        </section>
         <footer></footer>
         <script src="assets/js/scripts.js"></script>
     </body>
