added start card to start quiz, button added to launch questions

--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
     </head>
     <body>
         <header>
-            <button type="button">View High Score</button>
+            <button class="header_btn" type="button">View High Score</button>
             <div class="timer">Right side</div>
         </header>
         <section >
-             <div class="questions">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ad nisi voluptatum nam? Molestias, itaque!</div>
-             <div class="answers">
-                <button type="button" class="ansBtn">Answer 1</button>
-                <button type="button" class="ansBtn">Answer 2</button>
-                <button type="button" class="ansBtn">Answer 3</button>
-                <button type="button" class="ansBtn">Answer 4</button>
+            <div class="start_card">JavaScript Quiz Challenge
+                <p class="start_p">This quiz is multiple choice, try your best to answer all the questions.
+                   You will have 60 seconds to answer as many questions as you can and your scores 
+                   will be recorded. Good Luck!     
+                </p>
+                <button class="start_btn">Start Quiz</button>
+            </div>
+            <div class="questions">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis, a sunt necessitatibus magnam aspernatur!</div>
+            <div class="answers">
+                <button type="button" class="ansBtn" id="btn1">Answer 1</button>
+                <button type="button" class="ansBtn" id="btn2">Answer 2</button>
+                <button type="button" class="ansBtn" id="btn3">Answer 3</button>
+                <button type="button" class="ansBtn" id="btn4">Answer 4</button>
              </div>
         </section>
         <footer></footer>
