footer div's created, shows incorrect/correct when selecting answer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                 <button type="button" class="ansBtn" id="btn4">Answer 4</button>
              </div>
         </section>
-        <footer></footer>
+        <footer>
+            <div class="foot_txt1">Incorrect</div>
+            <div class="foot_txt2">Correct</div>
+        </footer>
         <script src="assets/js/scripts.js"></script>
     </body>
 </html>
