Added functions to load questions and function for correct/incorrect popup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section >
             <div class="start_card">JavaScript Quiz Challenge
                 <p class="start_p">This quiz is multiple choice, try your best to answer all the questions.
-                   You will have 60 seconds to answer as many questions as you can and your scores 
+                   You will have 60 seconds to answer as many questions as you can. Your scores 
                    will be recorded. Good Luck!     
                 </p>
                 <button class="start_btn">Start Quiz</button>
