--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                 </p>
                 <button class="start_btn">Start Quiz</button>
             </div>
+            <div class="end_card">
+                <p class="end_p">Quiz Completed</p>
+                <p class="end_score">Your Score is :</p>
+                <label for="name" class="end_score">Enter Name: </label>
+                <input type="text" name="name" placeholder="John Doe" class="input" size="20">
+                <input type="button" value="Submit" class="header_btn" id="saveScore">
+            </div>
             <div class="questions">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis, a sunt necessitatibus magnam aspernatur!</div>
             <div class="answers">
                 <button type="button" class="ansBtn" id="btn1">Answer 1</button>
