fixed counter for score and qIndex

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                 <p class="end_p">Quiz Completed</p>
                 <p class="end_score">Your Score is :</p>
                 <label for="name" class="end_score">Enter Name: </label>
-                <input type="text" name="name" placeholder="John Doe" class="input" size="20">
+                <input type="text" name="name" placeholder="John Doe" id="inputTxt" size="20">
                 <input type="button" value="Submit" class="header_btn" id="saveScore">
+                <input type="button" value="Restart" class="header_btn" id="restart">
             </div>
             <div class="questions">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis, a sunt necessitatibus magnam aspernatur!</div>
             <div class="answers">
