--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <body>
         <header>
             <button class="header_btn" type="button">View High Score</button>
-            <div class="timer">Right side</div>
+            <div class="timer"></div>
         </header>
         <section >
             <div class="start_card">JavaScript Quiz Challenge
                 <p class="start_p">This quiz is multiple choice, try your best to answer all the questions.
-                   You will have 60 seconds to answer as many questions as you can. Your scores 
-                   will be recorded. Good Luck!     
+                   You will have 60 seconds to answer as many questions as you can. Time will be decreased if you answer a questions incorrectly. Your scores will be recorded. Good Luck!     
                 </p>
                 <button class="start_btn">Start Quiz</button>
             </div>
@@ -25,11 +24,17 @@
                 <p class="end_p">Quiz Completed</p>
                 <p class="end_score">Your Score is :</p>
                 <label for="name" class="end_score">Enter Name: </label>
-                <input type="text" name="name" placeholder="John Doe" id="inputTxt" size="20">
+                <input type="text" name="name" placeholder="John Doe" id="inputTxt" size="10">
                 <input type="button" value="Submit" class="header_btn" id="saveScore">
                 <input type="button" value="Restart" class="header_btn" id="restart">
             </div>
-            <div class="questions">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis, a sunt necessitatibus magnam aspernatur!</div>
+            <div class="end_card2">
+                <p class="end_p">ALL Out of Time <br>
+                Try Again!</p>
+                <p class="end_Score2">Your Score is :</p>
+                <input type="button" value="Restart" class="header_btn" id="restart2">
+            </div>
+            <div class="questions"></div>
             <div class="answers">
                 <button type="button" class="ansBtn" id="btn1">Answer 1</button>
                 <button type="button" class="ansBtn" id="btn2">Answer 2</button>
