Started Score history card, event handler for button setup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <button class="header_btn" type="button">View High Score</button>
+            <button class="header_btn" type="button" id="highScore">View High Score</button>
             <div class="timer"></div>
         </header>
         <section >
@@ -33,6 +33,10 @@
                 Try Again!</p>
                 <p class="end_Score2">Your Score is :</p>
                 <input type="button" value="Restart" class="header_btn" id="restart2">
+            </div>
+            <div class="highScoreCard">
+                <p class="end_p">Score History </p>
+                <input type="button" value="Restart" class="header_btn" id="restart3">
             </div>
             <div class="questions"></div>
             <div class="answers">
